--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body class="p-4 sm:p-6 md:p-8 flex items-center justify-center min-h-screen">
     <div class="bg-white p-6 sm:p-8 md:p-10 rounded-xl shadow-2xl w-full max-w-4xl border border-gray-200">
-        <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-900 mb-6 text-center">Generátor protokolu VV dle ČSN 33 2000-5-51 ed.3</h1>
+        <!-- Removed the h1 "Generátor protokolu VV dle ČSN 33 2000-5-51 ed.3" -->
 
         <div id="inputUI"> <!-- This section contains all form elements and will be hidden/shown dynamically -->
             <p class="text-gray-600 text-base mb-6 text-center">
