--- a/index.html
+++ b/index.html
@@ -283,22 +283,27 @@
             console.error("Failed to parse Firebase config from Canvas environment:", e);
         }
 
-        // If firebaseConfig is empty (e.g., when running outside Canvas), provide a placeholder
-        // YOU MUST REPLACE THESE PLACEHOLDER VALUES WITH YOUR ACTUAL FIREBASE PROJECT CONFIGURATION
-        // Go to your Firebase project settings -> "Your apps" -> "Web" -> "Config"
-        if (Object.keys(firebaseConfig).length === 0 || !firebaseConfig.apiKey) {
-            firebaseConfig = {
-                apiKey: "YOUR_API_KEY", // Replace with your actual API Key
-                authDomain: "YOUR_PROJECT_ID.firebaseapp.com", // Replace with your actual Auth Domain
-                projectId: "YOUR_PROJECT_ID", // Replace with your actual Project ID
-                storageBucket: "YOUR_PROJECT_ID.appspot.com", // Replace with your actual Storage Bucket
-                messagingSenderId: "YOUR_MESSAGING_SENDER_ID", // Replace with your actual Messaging Sender ID
-                appId: "YOUR_APP_ID", // Replace with your actual App ID
-                measurementId: "YOUR_MEASUREMENT_ID" // Replace with your actual Measurement ID (optional)
-            };
-            console.warn("Firebase configuration was not provided by the Canvas environment or was invalid. Using placeholder config. Please update 'firebaseConfig' in the script with your actual Firebase project details for save/load functionality to work on GitHub Pages.");
-        }
-        
+       // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyAHc9JlkGFdLDiyvoHLh-UZKl-WwIFUpsA",
+  authDomain: "generatorvv-34ed3.firebaseapp.com",
+  projectId: "generatorvv-34ed3",
+  storageBucket: "generatorvv-34ed3.firebasestorage.app",
+  messagingSenderId: "523482338825",
+  appId: "1:523482338825:web:e2f41775f75f8b6dad0ad8",
+  measurementId: "G-02V5Z0TPNB"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);        
         let app;
         let db = null;
         let auth = null;
