--- a/index.html
+++ b/index.html
@@ -271,19 +271,7 @@
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // Firebase setup variables (provided by Canvas environment)
-        // These are provided by the Canvas environment. When deploying to GitHub Pages,
-        // you will need to replace these with your actual Firebase project configuration.
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id'; // Replace 'default-app-id' with your actual app ID if needed
-        const firebaseConfigRaw = typeof __firebase_config !== 'undefined' ? __firebase_config : '{}';
-        let firebaseConfig = {};
-        try {
-            firebaseConfig = JSON.parse(firebaseConfigRaw);
-        } catch (e) {
-            console.error("Failed to parse Firebase config from Canvas environment:", e);
-        }
-
-       // Import the functions you need from the SDKs you need
+    // Import the functions you need from the SDKs you need
 import { initializeApp } from "firebase/app";
 import { getAnalytics } from "firebase/analytics";
 // TODO: Add SDKs for Firebase products that you want to use
@@ -300,6 +288,10 @@ const firebaseConfig = {
   appId: "1:523482338825:web:e2f41775f75f8b6dad0ad8",
   measurementId: "G-02V5Z0TPNB"
 };
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
 // Initialize Firebase
 const app = initializeApp(firebaseConfig);
