--- a/index.html
+++ b/index.html
@@ -274,30 +274,25 @@
         // Firebase setup variables (provided by Canvas environment)
         // These are provided by the Canvas environment. When deploying to GitHub Pages,
         // you will need to replace these with your actual Firebase project configuration.
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id'; // Replace 'default-app-id' with your actual app ID if needed
-        const firebaseConfigRaw = typeof __firebase_config !== 'undefined' ? __firebase_config : '{}';
-        let firebaseConfig = {};
-        try {
-            firebaseConfig = JSON.parse(firebaseConfigRaw);
-        } catch (e) {
-            console.error("Failed to parse Firebase config from Canvas environment:", e);
-        }
-
-        // If firebaseConfig is empty (e.g., when running outside Canvas), provide a placeholder
-        // YOU MUST REPLACE THESE PLACEHOLDER VALUES WITH YOUR ACTUAL FIREBASE PROJECT CONFIGURATION
-        // Go to your Firebase project settings -> "Your apps" -> "Web" -> "Config"
-        if (Object.keys(firebaseConfig).length === 0 || !firebaseConfig.apiKey) {
-            firebaseConfig = {
-                apiKey: "YOUR_API_KEY", // Replace with your actual API Key
-                authDomain: "YOUR_PROJECT_ID.firebaseapp.com", // Replace with your actual Auth Domain
-                projectId: "YOUR_PROJECT_ID", // Replace with your actual Project ID
-                storageBucket: "YOUR_PROJECT_ID.appspot.com", // Replace with your actual Storage Bucket
-                messagingSenderId: "YOUR_MESSAGING_SENDER_ID", // Replace with your actual Messaging Sender ID
-                appId: "YOUR_APP_ID", // Replace with your actual App ID
-                measurementId: "YOUR_MEASUREMENT_ID" // Replace with your actual Measurement ID (optional)
+         const firebaseConfig = {
+              apiKey: "AIzaSyAHc9JlkGFdLDiyvoHLh-UZKl-WwIFUpsA",
+              authDomain: "generatorvv-34ed3.firebaseapp.com",
+              projectId: "generatorvv-34ed3",
+              storageBucket: "generatorvv-34ed3.firebasestorage.app",
+              messagingSenderId: "523482338825",
+              appId: "1:523482338825:web:e2f41775f75f8b6dad0ad8",
+              measurementId: "G-02V5Z0TPNB" // Toto je volitelné, pokud nechcete analytics
             };
-            console.warn("Firebase configuration was not provided by the Canvas environment or was invalid. Using placeholder config. Please update 'firebaseConfig' in the script with your actual Firebase project details for save/load functionality to work on GitHub Pages.");
-        }
+
+            // Definice appId pro Firestore cestu (používáme projectId pro jednoduchost a robustnost)
+            const appId = firebaseConfig.projectId;
+            
+            // Proměnné pro instanci Firebase aplikace
+            let app;
+            let db = null;
+            let auth = null;
+            let userId = null;
+            let isFirebaseReady = false; // Sleduje stav inicial
         
         let app;
         let db = null;
